--- a/requirements.txt
+++ b/requirements.txt
@@ -13,4 +13,5 @@ plotly
 spacy
 sentence_transformers
 bertopic
+hdbscan
 https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.0.0/en_core_web_md-3.0.0.tar.gz
