--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+numpy==1.20.3
 scikit-learn
 pandas
 joblib
@@ -11,7 +12,5 @@ sentencepiece
 bert-extractive-summarizer
 plotly
 spacy
-sentence_transformers
-bertopic
-hdbscan
+bertopic[all]
 https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.0.0/en_core_web_md-3.0.0.tar.gz
