--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 numpy==1.20.3
+scipy==1.4.1
 scikit-learn
 pandas
 joblib
@@ -12,5 +13,5 @@ sentencepiece
 bert-extractive-summarizer
 plotly
 spacy
-bertopic[all]
+bertopic[use]
 https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.0.0/en_core_web_md-3.0.0.tar.gz
