--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,5 @@ bert-extractive-summarizer
 plotly
 spacy
 bertopic[use]
+dill
 https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.0.0/en_core_web_md-3.0.0.tar.gz
