topic models remove

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ transformers==3.5.1
 sentencepiece
 bert-extractive-summarizer
 plotly
-spacy
-bertopic[use]
-dill
-https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.0.0/en_core_web_md-3.0.0.tar.gz
+# spacy
+# bertopic[use]
+# dill
+# https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.0.0/en_core_web_md-3.0.0.tar.gz
