--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,13 @@
 streamlit==0.83.0
-numpy==1.20.3
-scipy==1.4.1
+numpy
 scikit-learn
 pandas
-joblib==1.0.1
+joblib
 tensorflow
 nltk
 matplotlib
 torch
-transformers==3.5.1
+transformers
 sentencepiece
 bert-extractive-summarizer
 plotly
